library/general/validtags/samples/allow_disallow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-disallowed
  namespace: default
spec:
  containers:
    - name: bitnami-nginx
      image: docker.io/bitnami/nginx
    - name: nginx
      image: docker.io/nginx:latest
    - name: busybox
      image: docker.io/busybox:stable
