library/general/validtags/samples/disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed
  namespace: default
spec:
  containers:
    - name: bitnami-nginx
      image: docker.io/bitnami/nginx
    - name: nginx
      image: docker.io/nginx:latest
