library/general/validtags/samples/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sValidTags
metadata:
  name: tags-validation
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
